src/assets/stylesheets/pages/_home.scss
/* ... */
.slick-dots > :not(.slick-active) > .orange-color{
  background-color: #666;
  width: 10px;
  height: 10px;
}

.bottom-50 {
  bottom: -50px !important;
}

.main-container {
  height:  67px;

  @include media-breakpoint-down(sm) {
    height: 47px;
  }
}

.cursor-pointer {
  cursor: pointer;
}

.w-90 {
  width: 90%;
}

.align-self-center {
  align-self: center;
}

.text-orange {
  color: #CF4338;
  font-size: 13px;
}

.text-black{
  color: #03232D;
  font-size: 10px;
}

.ellipsis {
  overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6; /* number of lines to show */
   line-height: 20px;        /* fallback */
   max-height: 100px;
}



.read-more {
  button {
    background-color: #FFFFFF;
    float: right;
    margin-top: 14px;
    height: 30px;
    position: relative;
    bottom: 5px;
    width: 92px;
    width: 92px;
    border-radius: 15px 15px 15px 15px;
  }
  span {
    font-size: 9px;
    position: relative;
    bottom: 5px;
  }
  
  
  .btn-secondary {
    // display: none;
    background-color: transparent;
    
  }
}

.font-size-20 {
  font-size: 20px;

  @include media-breakpoint-down(sm) {
    font-size: 16px;
  }
}


.carousel-arrow {
  width: 63px !important;
  height: 63px !important;
}

.slick-prev {
  left: -72px !important;
}

.slick-next {
  right: -72px !important;
}

.size-30 {
  width: 30px;
  height: 30px;
}

.w-55 {
  width: 55%;
}

